--- a/index.html
+++ b/index.html
@@ -3,21 +3,9 @@ layout: default
 ---
 
   {%- if page.datatable == true %}
-    <!-- Include the standard DataTables bits -->
-    <link rel="stylesheet" type="text/css" href="{{ 'assets/css/dataTables.bootstrap5.min.css' | relative_url }}">
-    <script type="text/javascript" charset="utf8" src="{{ 'assets/js/jquery.dataTables.min.js' | relative_url }}"></script>
-    <script type="text/javascript" charset="utf8" src="{{ 'assets/js/dataTables.bootstrap5.min.js' | relative_url }}"></script>
-    <script>
-        $.fn.DataTable.ext.pager.numbers_length = 5;
-        $(document).ready(function () {
-            $('div.datatable-begin').nextUntil('div.datatable-end', 'table').addClass('display');
-            $('table.display').DataTable({
-                lengthMenu: [ [25, 50, 100, -1], [25, 50, 100, "All"] ],
-                ordering:false,
-                stateSave: true,
-                searching: true
-            });
-        });
+<link rel='stylesheet' href='https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css'><link rel="stylesheet" href="./style.css">
+   <script src='https://code.jquery.com/jquery-3.5.1.js'></script>
+<script src='https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js'></script><script  src="/js/jekyll-search.js"></script>
     </script>
     {% endif %}
 
